# Icarus

./: .gitignore  dev-requirements.txt  eda.html  eda.ipynb  index.html  justfile  listings.json  onboarding.html  pres.qmd  pyproject.toml  readme.md  search.json  slides.html
.dagster/: dagster.yaml
.github/workflows/: cicd.yaml  docs.yaml
apps/: main.py
slides/overview/: index.html
slides/synthetic-data/: index.html
src/icarus/: catalog.py  cli.py  config.py
src/icarus/investments/: extract.py  run.py  transform.py
src/icarus/investments/dag/: __init__.py  config.py  jobs.py  resources.py
src/icarus/investments/dag/assets/: __init__.py  bronze.py  gold.py  silver.py
src/icarus/penguins/: extract.py  run.py  transform.py
src/icarus/synthetic_data/: __init__.py  investments.py
src/icarus_investments/: catalog.py  cli.py  seed.py  source.py
src/icarus_investments/dag/: __init__.py  config.py  jobs.py  resources.py
src/icarus_investments/dag/assets/: __init__.py  bronze.py  gold.py  silver.py
website/: _quarto.yml  eda.qmd  index.qmd  onboarding.qmd  slides.qmd
website/slides/overview/: index.qmd
website/slides/synthetic-data/: index.qmd
