[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "icarus-investments"
version = "0.1.0"
authors = [{ name = "Cody", email = "cody@dkdc.dev" }]
description = "Composable data system template project"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'gcsfs',
    'ibis-framework[duckdb,deltalake]==9.1.0',
    'typer',
    'python-dotenv',
    'plotly',
    'streamlit',
    'great-tables',
    'dagster',
    'dagster-webserver',
    'Faker',
]

[project.urls]
"Homepage" = "https://github.com/lostmygithubaccount/icarus-investments"
"Bug Tracker" = "https://github.com/lostmygithubaccount/icarus-investments/issues"

[project.scripts]
icarus = "icarus_investments.cli:app"

[tool.ruff]
extend-include = ["*.ipynb"]
